--- a/Pipfile
+++ b/Pipfile
@@ -6,8 +6,13 @@ name = "pypi"
 [packages]
 django = "*"
 django-stubs = "*"
+mysqlclient = "*"
+django-environ = "*"
 
 [dev-packages]
+flake8 = "*"
+autopep8 = "*"
+flake8-import-order = "*"
 
 [requires]
 python_version = "3.8"
